styling for steps

--- a/urbanstory/pages/components/steps.html
+++ b/urbanstory/pages/components/steps.html
@@ -55,35 +55,54 @@
             <div class="step-counter"><span>64%</span></div>
         </div>
         <h4>Steps-points</h4>
-        <div class="steps-points">
-           
-            <div class="row">
-                <div class="progress-connector"></div>
-                <div class="step-item col-xs-4">
-                    <div class="step-point"></div>
+        <div class="row steps-points">
+                <div class="step-item col-xs-4 is-active">
+                    <div class="step-point"><span>1</span></div>
+                    <div class="step-content">
+                            <h4><small>Register</small></h4>
+                            <p>Search Engine Optimization And Advertising</p>
+                    </div>
                 </div>
                 <div class="step-item col-xs-4">
-                    <div class="step-point"></div>
+                    <div class="step-point"><span>2</span></div>
+                    <div class="step-content">
+                            <h4><small>Profile</small></h4>
+                            <p>Promotional Advertising Specialty You Ve Waited Long Enough</p>
+                    </div>
                 </div>
                 <div class="step-item col-xs-4">
-                    <div class="step-point"></div>
+                    <div class="step-point"><span>3</span></div>
+                    <div class="step-content">
+                            <h4><small>Preferences</small></h4>
+                            <p>From Wetlands To Canals And Dams Amsterdam Is Alive</p>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="step-item col-xs-4">
-                    <h4><small>Register</small></h4>
-                    <p>Search Engine Optimization And Advertising</p>
-                </div>
-                <div class="step-item col-xs-4">
-                    <h4><small>Register</small></h4>
-                    <p>Search Engine Optimization And Advertising</p>
-                </div>
-                <div class="step-item col-xs-4">
-                    <h4><small>Register</small></h4>
-                    <p>Search Engine Optimization And Advertising</p>
-                </div>
-            </div>
         </div>
+        <h4>Steps-points <small>(done-condition)</small></h4>
+        <div class="row steps-points">
+                <div class="step-item col-xs-4 is-active is-done">
+                    <div class="step-point"><span><i class="icon-check"></i></span></div>
+                    <div class="step-content">
+                            <h4><small>Register</small></h4>
+                            <p>Search Engine Optimization And Advertising</p>
+                    </div>
+                </div>
+                <div class="step-item col-xs-4">
+                    <div class="step-point"><span>2</span></div>
+                    <div class="step-content">
+                            <h4><small>Profile</small></h4>
+                            <p>Promotional Advertising Specialty You Ve Waited Long Enough</p>
+                    </div>
+                </div>
+                <div class="step-item col-xs-4">
+                    <div class="step-point"><span>3</span></div>
+                    <div class="step-content">
+                            <h4><small>Preferences</small></h4>
+                            <p>From Wetlands To Canals And Dams Amsterdam Is Alive</p>
+                    </div>
+                </div>
+        </div>
+            
     </section>
 </div>
 
