Finish styling for steps component

--- a/urbanstory/pages/components/steps.html
+++ b/urbanstory/pages/components/steps.html
@@ -5,36 +5,36 @@
     <section>
         <h4>Steps-block</h4>
         <div class="steps-block">
-            <div class="step-block-item col-xs-3">
+            <a href="#" class="step-item col-xs-3">
                 <h4>Step 1</h4>
                 <p>Promotional Advertising Specialty You Ve Waited Long Enough</p>
-            </div>
-            <div class="step-block-item col-xs-3 active">
+            </a>
+            <a href="#" class="step-item col-xs-3">
                 <h4>Step 2</h4>
                 <p>Study 800 Numbers Still Popular With Advertisers</p>
-            </div>
-            <div class="step-block-item col-xs-3">
+            </a>
+            <a href="#" class="step-item col-xs-3">
                 <h4>Step 3</h4>
                 <p>Promotional Advertising Specialty You Ve Waited Long Enough</p>
-            </div>
-            <div class="step-block-item col-xs-3">
+            </a>
+            <a href="#" class="step-item col-xs-3">
                 <h4>Step 4</h4>
                 <p>Promotional Advertising Specialty You Ve Waited Long Enough</p>
-            </div>
+            </a>
         </div>
         <h4>Steps-progress <samll>(with grid)</samll></h4>
         <div class="steps-progress">
             <div class="progress"><div style="width:64%;"></div></div>
             <div class="row">
-                <div class="step-item col-xs-3 is-done">
+                <a href="#" class="step-item col-xs-4 is-done">
                     <span><i class="icon-check"></i><p>1. Register</p></span>
-                </div>
-                <div class="step-item col-xs-3 is-active">
+                </a>
+                <a href="#" class="step-item col-xs-4 is-active">
                     <span><i class="icon-draft"></i><p>2. Complete your profile</p></span>
-                </div>
-                <div class="step-item col-xs-3">
+                </a>
+                <a href="#" class="step-item col-xs-4">
                     <span><i class="icon-draft"></i><p>3. Complete your preferences</p></span>
-                </div>
+                </a>
             </div>
             <div class="step-counter"><span>64%</span></div>
         </div>
@@ -42,67 +42,66 @@
         <div class="steps-progress">
             <div class="progress"><div style="width:64%;"></div></div>
             <div class="row">
-                <div class="step-item is-done">
+                <a href="#" class="step-item is-done">
                     <span><i class="icon-check"></i><p>1. Register</p></span>
-                </div>
-                <div class="step-item is-active">
+                </a>
+                <a href="#" class="step-item is-active">
                     <span><i class="icon-draft"></i><p>2. Complete your profile</p></span>
-                </div>
-                <div class="step-item ">
+                </a>
+                <a href="#" class="step-item ">
                     <span><i class="icon-draft"></i><p>3. Complete your preferences</p></span>
-                </div>
+                </a>
             </div>
             <div class="step-counter"><span>64%</span></div>
         </div>
         <h4>Steps-points</h4>
         <div class="row steps-points">
-                <div class="step-item col-xs-4 is-active">
+                <a href="#" class="step-item col-xs-4 is-active">
                     <div class="step-point"><span>1</span></div>
                     <div class="step-content">
                             <h4><small>Register</small></h4>
                             <p>Search Engine Optimization And Advertising</p>
                     </div>
-                </div>
-                <div class="step-item col-xs-4">
+                </a>
+                <a href="#" class="step-item col-xs-4">
                     <div class="step-point"><span>2</span></div>
                     <div class="step-content">
                             <h4><small>Profile</small></h4>
                             <p>Promotional Advertising Specialty You Ve Waited Long Enough</p>
                     </div>
-                </div>
-                <div class="step-item col-xs-4">
+                </a>
+                <a href="#" class="step-item col-xs-4">
                     <div class="step-point"><span>3</span></div>
                     <div class="step-content">
                             <h4><small>Preferences</small></h4>
                             <p>From Wetlands To Canals And Dams Amsterdam Is Alive</p>
                     </div>
-                </div>
+                </a>
         </div>
         <h4>Steps-points <small>(done-condition)</small></h4>
         <div class="row steps-points">
-                <div class="step-item col-xs-4 is-active is-done">
-                    <div class="step-point"><span><i class="icon-check"></i></span></div>
-                    <div class="step-content">
-                            <h4><small>Register</small></h4>
-                            <p>Search Engine Optimization And Advertising</p>
-                    </div>
+            <a class="step-item col-xs-4 is-active is-done">
+                <div class="step-point"><span><i class="icon-check"></i></span></div>
+                <div class="step-content">
+                    <h4><small>Register</small></h4>
+                    <p>Search Engine Optimization And Advertising</p>
                 </div>
-                <div class="step-item col-xs-4">
-                    <div class="step-point"><span>2</span></div>
-                    <div class="step-content">
-                            <h4><small>Profile</small></h4>
-                            <p>Promotional Advertising Specialty You Ve Waited Long Enough</p>
-                    </div>
+            </a>
+            <a href="#" class="step-item col-xs-4 is-active">
+                <div class="step-point"><span>2</span></div>
+                <div class="step-content">
+                    <h4><small>Profile</small></h4>
+                    <p>Promotional Advertising Specialty You Ve Waited Long Enough</p>
                 </div>
-                <div class="step-item col-xs-4">
-                    <div class="step-point"><span>3</span></div>
-                    <div class="step-content">
-                            <h4><small>Preferences</small></h4>
-                            <p>From Wetlands To Canals And Dams Amsterdam Is Alive</p>
-                    </div>
+            </a>
+            <a href="#" class="step-item col-xs-4">
+                <div class="step-point"><span>3</span></div>
+                <div class="step-content">
+                    <h4><small>Preferences</small></h4>
+                    <p>From Wetlands To Canals And Dams Amsterdam Is Alive</p>
                 </div>
-        </div>
-            
+            </a>
+        </div>   
     </section>
 </div>
 
