add components preloader

--- a/urbanstory/pages/components/preloader.html
+++ b/urbanstory/pages/components/preloader.html
@@ -10,6 +10,12 @@
     	<span class="uh-loader is-large">Loading...</span>
     	<button class="btn btn-firm btn-min-width"><span class="uh-loader is-white">Loading...</span></button>
     	<button class="btn btn-danger btn-min-width"><span class="uh-loader is-white">Loading...</span></button>
-    	<pre><code></code></pre>
-    </section>
+	</section>
+	<section>
+		<pre><code>&lt;span class=&quot;uh-loader is-small&quot;&gt;Loading...&lt;/span&gt;
+&lt;span class=&quot;uh-loader&quot;&gt;Loading...&lt;/span&gt;
+&lt;span class=&quot;uh-loader is-large&quot;&gt;Loading...&lt;/span&gt;
+&lt;button class=&quot;btn btn-firm btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;
+&lt;button class=&quot;btn btn-danger btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;</code></pre>
+	</section>
 </div>
