--- a/urbanstory/src/css/urbanstory.css
+++ b/urbanstory/src/css/urbanstory.css
@@ -10,7 +10,7 @@ html, * {
 }
 
 body {
-  font-family: "Barlow", Arial, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   color: #212121;
 }
 
@@ -46,7 +46,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: "Barlow", Arial, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 input[type=submit],
@@ -150,6 +150,13 @@ dl dt {
 dl dd {
   color: #757575;
   padding: 4px 0;
+}
+
+hr {
+  border: none;
+  height: 1px;
+  width: 100%;
+  background: #d6d6d6;
 }
 
 .page-hero {
@@ -399,6 +406,14 @@ code {
   letter-spacing: 1rem;
   font-size: 1.5rem;
   line-height: 1.5em;
+}
+
+.font-heading {
+  font-family: "Barlow", Arial, sans-serif;
+}
+
+.font-body {
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 .font-italic {
