--- a/urbanstory/src/css/sass/global/_variables.scss
+++ b/urbanstory/src/css/sass/global/_variables.scss
@@ -62,7 +62,7 @@ $gutter-s: 4px;
 
 // font family
 $font-heading: "Barlow", Arial, sans-serif;
-$font-stack: "Source Sans Pro", Arial, sans-serif;
+$font-stack: 'Source Sans Pro', sans-serif;
 $font-icon: urbanfont;
 
 //font sizes
@@ -83,9 +83,6 @@ $card-box-shadow: 0 0 0 1px rgba(black, 0.05), 0 2px 5px 0 rgba(black, 0.05);
 $icon-size: 14px;
 
 $br-height: 18px;
-
-$font-stack: "Barlow", Arial, sans-serif;
-$font-icon: urbanfont;
 
 
 $screen-s: 48em; // 768
