--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -10,7 +10,7 @@ html, * {
 }
 
 body {
-  font-family: "Barlow", Arial, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   color: #212121;
 }
 
@@ -46,7 +46,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: "Barlow", Arial, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 input[type=submit],
@@ -2665,6 +2665,10 @@ input[type=checkbox]:focus {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  -webkit-transition: cubic-bezier(0.11, 0.65, 0.73, 0.66), 0.2s;
+  -moz-transition: cubic-bezier(0.11, 0.65, 0.73, 0.66), 0.2s;
+  -o-transition: cubic-bezier(0.11, 0.65, 0.73, 0.66), 0.2s;
+  transition: cubic-bezier(0.11, 0.65, 0.73, 0.66), 0.2s;
 }
 .menu-drawer.active::before {
   box-shadow: -5px -7px 0 #011148, 5px 7px 0 #011148;
