Fixing jquery function for displaying snippet code

--- a/urbanstory/src/css/sass/components-global/_tab.scss
+++ b/urbanstory/src/css/sass/components-global/_tab.scss
@@ -14,6 +14,9 @@
       text-align: center;
       padding: $gutter-l;
       position: relative;
+      &.nav-fit-content{
+        flex: 0;
+      }
       &.no-grow {
         max-width: 64px;
       }
