--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -10,6 +10,7 @@
 
 // global css
 @import "../global/_global";
+@import "../global/_prism";
 
 // main css
 @import "../components-global/_extends";
@@ -32,6 +33,7 @@
 @import "../components-global/_preloader";
 @import "../components-global/_tooltip";
 @import "../components-global/_steps";
+
 
 // cards
 @import "../components-global/_img-showcase";
