--- a/urbanstory/src/css/sass/global/_prism.scss
+++ b/urbanstory/src/css/sass/global/_prism.scss
@@ -1,5 +1,3 @@
-/* PrismJS 1.16.0
-https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+scss+sass */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -9,16 +7,12 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
  code[class*="language-"],
  pre[class*="language-"] {
      color: black;
-     background: none;
      text-shadow: 0 1px white;
-     //font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-     font-size: 1em;
+     font-family: Consolas, Monaco, 'Andale Mono', monospace;
+     direction: ltr;
      text-align: left;
      white-space: pre;
      word-spacing: normal;
-     word-break: normal;
-     word-wrap: normal;
-     line-height: 1.5;
  
      -moz-tab-size: 4;
      -o-tab-size: 4;
@@ -58,14 +52,13 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
  
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
-     background: white;
+     background: #f5f2f0;
  }
  
  /* Inline code */
  :not(pre) > code[class*="language-"] {
      padding: .1em;
      border-radius: .3em;
-     white-space: normal;
  }
  
  .token.comment,
@@ -86,19 +79,13 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
  .token.property,
  .token.tag,
  .token.boolean,
- .token.number,
- .token.constant,
- .token.symbol,
- .token.deleted {
+ .token.number {
      color: #905;
  }
  
  .token.selector,
  .token.attr-name,
- .token.string,
- .token.char,
- .token.builtin,
- .token.inserted {
+ .token.string {
      color: #690;
  }
  
@@ -107,8 +94,8 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
  .token.url,
  .language-css .token.string,
  .style .token.string {
-     color: #9a6e3a;
-     background: hsla(0, 0%, 100%, .5);
+     color: #a67f59;
+     background: hsla(0,0%,100%,.5);
  }
  
  .token.atrule,
@@ -117,27 +104,17 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
      color: #07a;
  }
  
- .token.function,
- .token.class-name {
-     color: #DD4A68;
- }
  
  .token.regex,
- .token.important,
- .token.variable {
+ .token.important {
      color: #e90;
  }
  
- .token.important,
- .token.bold {
+ .token.important {
      font-weight: bold;
- }
- .token.italic {
-     font-style: italic;
  }
  
  .token.entity {
      cursor: help;
  }
- 
  
