--- a/urbanstory/src/css/urbanstory.css
+++ b/urbanstory/src/css/urbanstory.css
@@ -152,9 +152,6 @@ dl dd {
   padding: 4px 0;
 }
 
-
-/* PrismJS 1.16.0
-https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+scss+sass */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -163,15 +160,12 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
 code[class*=language-],
 pre[class*=language-] {
   color: black;
-  background: none;
   text-shadow: 0 1px white;
-  font-size: 1em;
+  font-family: Consolas, Monaco, "Andale Mono", monospace;
+  direction: ltr;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
-  word-break: normal;
-  word-wrap: normal;
-  line-height: 1.5;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
@@ -208,14 +202,13 @@ pre[class*=language-] {
 
 :not(pre) > code[class*=language-],
 pre[class*=language-] {
-  background: white;
+  background: #f5f2f0;
 }
 
 /* Inline code */
 :not(pre) > code[class*=language-] {
   padding: 0.1em;
   border-radius: 0.3em;
-  white-space: normal;
 }
 
 .token.comment,
@@ -236,19 +229,13 @@ pre[class*=language-] {
 .token.property,
 .token.tag,
 .token.boolean,
-.token.number,
-.token.constant,
-.token.symbol,
-.token.deleted {
+.token.number {
   color: #905;
 }
 
 .token.selector,
 .token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
+.token.string {
   color: #690;
 }
 
@@ -257,7 +244,7 @@ pre[class*=language-] {
 .token.url,
 .language-css .token.string,
 .style .token.string {
-  color: #9a6e3a;
+  color: #a67f59;
   background: rgba(255, 255, 255, 0.5);
 }
 
@@ -267,35 +254,24 @@ pre[class*=language-] {
   color: #07a;
 }
 
-.token.function,
-.token.class-name {
-  color: #DD4A68;
-}
-
 .token.regex,
-.token.important,
-.token.variable {
+.token.important {
   color: #e90;
 }
 
-.token.important,
-.token.bold {
+.token.important {
   font-weight: bold;
-}
-
-.token.italic {
-  font-style: italic;
 }
 
 .token.entity {
   cursor: help;
 }
+
 hr {
   border: none;
   height: 1px;
   width: 100%;
   background: #d6d6d6;
-
 }
 
 .page-hero {
@@ -403,11 +379,12 @@ hr {
 }
 
 pre {
+  display: none;
   max-height: 500px;
   overflow-x: auto;
   padding: 1.25em 1.25em 1.25em 2em;
   border: 1px solid #d6d6d6;
-  margin: 1.6em 0;
+  margin: 0;
   font-size: 0.875em;
   white-space: pre;
   word-wrap: normal;
@@ -868,8 +845,12 @@ code {
   margin: 20px;
 }
 
-.display-off {
-  display: none;
+.display-on {
+  display: block;
+}
+
+.code-preview {
+  margin: 1em 0 0 0;
 }
 
 /*# sourceMappingURL=urbanstory.css.map */
